# zero2prod

./: Cargo.toml  LICENSE  user_history.md
.github/workflows/: rust-ci.yml
migrations/: 20250630153232_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
test/: health_check.rs
tests/: health_check.rs
