[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
# We could use any path here, but we are following the community convention# 
# We could specify a library name using the `name` field. If unspecified,# cargo 
# will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have on library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.219", features = ["derive"] }
config = "0.15.11"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
env_logger = "0.11.8"
log = "0.4.19"
tracing = { version = "0.1.41", features = ["log"] }

[dev-dependencies]
reqwest = "0.12.22"


[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
